--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
    --projectPanelWidth: 20%;
 }
 
-html{scrollbar-width:none;height:100%;margin:0; padding:0;scroll-snap-type: y mandatory;}
+html{scrollbar-width:none;height:100%;margin:0; padding:0;scroll-snap-type: y mandatory; cursor:none;}
+a{cursor:none;}
+
 
 body{height:100%;margin: 0; padding: 0;
     background-color: var(--dark_bg_color);
@@ -41,19 +43,19 @@ body{height:100%;margin: 0; padding: 0;
 html::-webkit-scrollbar{display:none;}
 
 #cursor {
-    height: 2.5vh;
-    width: 2.5vh;
+    height: 3vh;
+    width: 3vh;
     background-color: rgb(255,255,255,0.5);
     border-radius: 50%;
     border: solid;
-    border-color: rgba(156, 137, 255, 1);
+    border-color: #9c89ff;
     box-shadow: 0px 0px 5px #99CCED, 0px 0px 25px #99cced;
-    display: inline-block;
-    position: absolute;
-    top:0;
+    position: fixed;
+    top:-5vh;
     left:0;
-    z-index:99;
     pointer-events: none;
+    z-index:99;
+    transition: box-shadow 0.3s, border-color 0.3s;
 }
 
 .snap{scroll-snap-align: center;}
@@ -184,7 +186,6 @@ html::-webkit-scrollbar{display:none;}
 }
 
 #projectPanels div a div{
-    cursor:pointer;
     color:white;
     background-image: none;
 
